# zk-benchmarking-platform

./: .gitignore  .gitmodules  README.md  config.json  gnark.ts  libsnark.ts  main.ts  package-lock.json  package.json  results.tex  system.ts  tsconfig.json  zokrates.ts
problems/hash/: README.md  instances.json
systems/: compile.xml  compute-witness.xml  setup.xml
systems/gnark/: go.mod  go.sum  main.go
systems/gnark/config/curve/: bls12_377.go  bls12_381.go  bls24_315.go  bls24_317.go  bn254.go  bw6_633.go  bw6_761.go
systems/gnark/config/phase/: prove.go  setup.go  verify.go
systems/gnark/config/statement/eddsa/: bls12_377.go  bls12_381.go  bls24_315.go  bls24_317.go  bn254.go  bw6_633.go  bw6_761.go
systems/gnark/io/: files.go  io.go
systems/gnark/scenario/: eddsa.go  mimc.go  scenario.go
systems/libsnark/programs/: CMakeLists.txt  actions.hpp  actions.tpp  compile.sh  main.cpp
systems/tools/: zokrates.py
systems/zokrates/: hello.zok  install.sh
systems/zokrates/programs/: eddsa.zok  mimc.zok
ts/: bench.ts  config.ts  fs.ts  process.ts  system.ts
ts/configurator/: cli-parser.ts  config-aggregator.ts  config-parser.ts  index.ts
ts/integrations/: gnark.ts  index.ts  integration.ts  zokrates.ts
ts/profiler/: config.ts  index.ts  statistics.ts  systeminformation.ts
ts/reporter/: config.ts
ts/systems/: gnark.ts  zokrates.ts
ts/workload/: statement.ts
